# ECE-30861-Phase2-24

./: .coverage  .gitignore  coverage.xml  pyproject.toml  requirements.txt  run
.github/workflows/: deploy.yml
old/: licenseAlt.py  metrics.py  testbench.py
scripts/: setup_dynamodb.py
src/: .coverage  api_keys.py  bus_factor.py  category.py  code_quality.py  dataset_code_score.py  dataset_quality.py  license.py  lineage_graph.py  lisence.py  metrics.py  model_ingest.py  name.py  netscore.py  performance_claims.py  ramp_up_time.py  reproducibility.py  reviewedness.py  run.py  run2.py  size_score.py  testbench.py  utils.py
src/api/: aws_config.py  main.py
src/api/models/: artifact.py
src/api/routers/: artifacts.py
src/api/services/: dynamodb_service.py
tests/: conftest.py
tests/integration/: test_cli_end_to_end.py
tests/unit/: test_bounds_sanity.py  test_io_ndjson.py
tests/unit/metrics/: test_bus_factor.py  test_code_quality.py  test_dataset_code_score.py  test_dataset_quality.py  test_hf_downloads.py  test_license.py  test_performance_claims.py  test_ramp_up.py  test_reproducibility.py  test_size_score.py
